[package]
name = "tshat"
version = "0.1.0"
authors = ["Laurent Ghigonis"]
edition = "2018"
description = "chat server for ssh clients"
license = "BSD"

[dependencies]
tokio = "1.6.0"
futures = "0.3.15"
thrussh = "0.32.9"
thrussh-keys = "0.20.4"
thrussh-libsodium = "0.2.1"
sodiumoxide = "0.2.6"
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
regex = "1.5"
log = "0.4"
env_logger = "0.8"
fork = "0.1"
data-encoding = "2.3.2"
